# BI4CV

./: .gitignore  Dockerfile  README.md  RESUME_ASSETS.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  trigger-on-app-py-changes.yml
BI4CV/: app.py  image_score.py
BI4CV/microservices/: 1_main_service.py  2_bi_tools.py  3_image_video_metadata_dashboard.py  utils.py
bi4media/: __init__.py  app.py
bi4media/docs/: To-Do.md  testing.md
bi4media/microservices/: 1_main_service.py  2_bi_tools.py  3_image_video_metadata_dashboard.py  image_score.py  utils.py
docs/: To-Do.md  plan.md
tests/: conftest.py  test.todo  test_image_score.py  test_utils.py
