[tool.poetry]
name = "bi4media"
version = "0.1.0"
description = "Dr. Farshid Pirahansiah"
authors = ["Farshid PirahanSiah <pirahansiah   - at - gmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^1.5.0"
Pillow = "^9.0.0"
plotly = "^5.0.0"
dash = "^2.0.0"
jupyter-dash = "^0.4.0"
numpy = "^1.22.0"
statsmodels = "^0.13.0"
opencv-python = "^4.5.0"
opencv-contrib-python = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"