[project]
name = "bi4media"
version = "0.2.0"
description = "Business Intelligence for Computer Vision — Generative AI-powered media analytics"
authors = [{ name = "Farshid Pirahansiah", email = "pirahansiah@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0,<4.0",
    "pandas>=2.0,<3.0",
    "Pillow>=10.0,<13.0",
    "plotly>=5.18,<7.0",
    "dash>=2.14,<5.0",
    "numpy>=1.24,<3.0",
    "opencv-python>=4.9,<5.0",
    "opencv-contrib-python>=4.9,<5.0",
    "scipy>=1.11,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<7.0",
    "ruff>=0.4,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
include = ["bi4media*"]
